fix: hide x scrollbar in replicate user [DHIS2-15611]

--- a/src/pages/UserList/ContextMenu/Modals/ReplicateModal.module.css
+++ b/src/pages/UserList/ContextMenu/Modals/ReplicateModal.module.css
@@ -2,3 +2,7 @@
     max-width: 250px;
     margin-bottom: var(--spacers-dp8);
 }
+
+.modalContent {
+    overflow-x: hidden;
+}
